# Resume_Talk

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: requirements.txt  run.py
backend/app/: main.py
backend/app/api/routes/: router.py
backend/app/api/routes/endpoints/: chat.py  optimize.py  status.py
backend/app/core/: config.py
backend/app/core/graph/: builder.py  nodes.py  supervisor.py
backend/app/core/models/: requests.py  responses.py  resume_state.py
backend/app/core/rag/: prompts.py  retriever.py  service.py
backend/app/core/utils/: pdf.py  prompts.py
backend/app/persistence/: checkpointer.py
frontend/: index.html
frontend_react/: package-lock.json  package.json
frontend_react/src/: App.jsx  index.css
frontend_react/src/hooks/: useAnalysis.js
notebooks/: 01_project.ipynb
