[project]
name = "resume-optimizer"
version = "0.1.0"
description = "AI-powered resume optimization and job application assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Bruce Wayne"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "langgraph>=0.2.0",             
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=1.0.0", 
    "pypdf>=5.0.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",                
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]  # optional — if you use uv instead of pip/poetry
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "black>=24.0",
]