[project]
name = "RESUME_TALK"
version = "0.1.0"
description = "FastAPI and LangGraph powered AI application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pydantic",
    "langchain",
    "langgraph",
    "python-dotenv",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-huggingface",
    "langchain-google-genai",
    "google-generativeai",
    "google-ai-generativelanguage",
    "uvicorn",
    "gunicorn",
    "faiss-cpu",
    "sentence-transformers",
    "tiktoken",
    "pypdf",
    "python-multipart",
    "huggingface-hub",
    "pdf2image",
    "pyprojroot",
    "pip-system-certs",
    "langchain-ollama",
    "openai",
    "langchain-groq",
    "langgraph-checkpoint-sqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages=["."]